Resolve "Design flaws in UI on mobile view"

--- a/prototype/prioss/src/app/framework/features/dashboard-menu/dashboard-menu.component.less
+++ b/prototype/prioss/src/app/framework/features/dashboard-menu/dashboard-menu.component.less
@@ -1,3 +1,12 @@
+:host {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  align-items: center;
+  padding-right: 20px;
+  background-color: #fff;
+}
+
 ul {
   line-height: 4rem;
   border-bottom: 1px solid gray;
