--- a/prototype/prioss/src/app/framework/features/header/header.component.less
+++ b/prototype/prioss/src/app/framework/features/header/header.component.less
@@ -4,10 +4,6 @@
   inset: 0 0 auto 0;
   border-bottom: 1px solid #f0f0f0;
   background-color: #fff;
-  .wifi-icon{
-    font-size: 20px;
-    margin-right: -10px;
-  }
 }
 
 header {
@@ -44,6 +40,8 @@ header {
 
   .main__hamburger-menu {
     display: block;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
